[package]
name = "nuttx-rewind-notify"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Apache NuttX RTOS: Notify via Mastodon the results of Rewind Builds"
homepage = "TODO"
repository = "https://github.com/lupyuen/nuttx-rewind-notify"
readme = "README.md"
keywords = ["nuttx", "rtos", "ci", "prometheus", "mastodon"]
categories = ["command-line-utilities"]

[dependencies]
bit-vec = "0.8.0"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.4"
